[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/parent_bullet.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Player/player_bullet_bone.png" type="Texture" id=2]
[ext_resource path="res://Scenes/parents/Hitbox.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1, 1 )

[node name="parent_bullet" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -1 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Hitbox" parent="." instance=ExtResource( 3 )]
collision_mask = 0

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -9.53674e-07, -0.125001 )
scale = Vector2( 1, 1.0125 )

[connection signal="area_shape_entered" from="." to="." method="_on_parent_bullet_area_shape_entered"]
[connection signal="body_entered" from="." to="." method="_on_parent_bullet_body_entered"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]

[editable path="Hitbox"]
